CHANGES.txt - 2008-08-04
------------------------

CHANGES IN CUPS V1.4b1

	- The sample HP driver now supports A5 (STR #2798)
	- The CUPS web interface menu item now uses the xdg-open
	  command, when available (STR #2724)
	- The cups-lpd program now supports the -h option (STR #2794)
	- The scheduler now sets the PAM_TTY parameter and the
	  PAM_ESTABLISH_CRED credential flag (STR #2745)
	- The scheduler now logs unsuccessful requests to the error_log
	  file as errors (STR #2616)
	- Added support for a "retry-current-job" error policy that
	  retries the current job immediately when the backend encounters
	  an error (STR #2555)
	- The scheduler now returns a "forbidden" error when a user
	  correctly authenticates but does not have permission to
	  continue further (STR #2101)
	- The scheduler now loads both the server and CA certificates
	  (if present) from the ServerCertificate file (STR #2146)
	- New RSS subscriptions now create their feed files immediately
	  (STR #2853)
	- Added support for a device-location attribute which provides
	  the physical location of a printer device.
	- Added a cupsBackendReport() API which handles quoting of the
	  device data by a backend.
	- Added support for custom options in the web interface
	  (STR #1729)
	- Added support for Mozilla LDAP, reconnection to LDAP servers,
	  and improved LDAP performance (STR #1962)
	- Added Solaris SMF support (STR #1477)
	- Added optional support for using TCP wrappers to limit access
	  to CUPS (STR #263)
	- Added ppdPageSizeLimits API.
	- Added support for new cupsMediaQualifier2, cupsMediaQualifier3,
	  cupsMinSize, and cupsMaxSize attributes.
	- Added cupsResolveConflicts and ppdInstallableConflict APIs.
	- Added support for new cupsUIConstraints and cupsUIResolver
	  attributes for better option conflict detection and
	  resolution.
	- Increased the maximum size of 1284 device ID strings to
	  256 bytes (STR #2877)
	- Added an AccessLogLevel directive to cupsd.conf to control